--- a/404.html
+++ b/404.html
@@ -46,19 +46,14 @@
   
   <body data-code="100" data-lines="false" id="documentTop">
 
-<header class="nav_header" >
-  <nav class="nav"><a href='https://dpnote.netlify.app/' class="nav_brand nav_item" title="DP Note">DP Note
-  
-</a>
-    
-
-  
-  <a href="https://dpnote.netlify.app/search/index.html"><i class="fas fa-search"></i></a>
 
 
-  </nav>
-</header>
+	<div id="header1">
 
+	<h1 class="h_h1"><a href="https://dpnote.netlify.app/index.html">ＤＰ　Ｎｏｔｅ</a></h1>
+	</div>
+	
+	<div class="h_s"><a href="https://dpnote.netlify.app/search/index.html"><div class="h_circle"><i class="fas fa-search"></i></div></a></div>
     <main>
 <div class="never wrap">
   <h1></h1>
