--- a/search/index.html
+++ b/search/index.html
@@ -18,14 +18,14 @@
 
 <meta property="og:type" content="article">
 <meta name="description" content="キーワードを入力するとリアルタイムで検索することができます。
-検索    ">
+検索     ">
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:creator" content="">
 <meta name="twitter:title" content="Search" />
 <meta property="og:url" content="https://dpnote.netlify.app/search/" />
 <meta property="og:title" content="Search" />
 <meta property="og:description" content="キーワードを入力するとリアルタイムで検索することができます。
-検索    " />
+検索     " />
 <meta property="og:image" content="https://dpnote.netlify.app/" />
 
 <link rel="apple-touch-icon" sizes="180x180" href="https://dpnote.netlify.app/icons/apple-touch-icon.png">
@@ -87,6 +87,7 @@
 </span>
 </ul>
 <ul id ="output"></ul>
+<script type="text/javascript" src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
 <script type="javascript" src="https://dpnote.netlify.app/js/search.js"></script>
 
 
