--- a/simulation/volcano.html
+++ b/simulation/volcano.html
@@ -13,7 +13,7 @@
 		
 		onload = async () => {
 
-		const url = "https://dpnote.netlify.app/data/volcano.csv";
+		const url = "https://raw.githubusercontent.com/linkevery2s/opendata/master/volcano.csv";
 		const data = CSV.parse(await (await fetch(url)).text());
 
 			volcano.innerHTML = "";
@@ -22,7 +22,7 @@
 			
 			for (let i = 0; i < count; i++){
 				
-				volcano.innerHTML+= "<li class='link'><span class='date_m'>" + data[i].date + "</span>　" + data[i].organization + "<div class='title'>" + data[i].title + "</div>" + "<a href='" + data[i].url + "' target='_blank'>詳細URL <i class='fas fa-external-link-alt'></i></a></li>" ;
+				volcano.innerHTML+= "<li class='link'><span class='date_m'>" + data[i].year + "</span>　" + "<div class='mountain'>" + data[i].mountain + "</div>" +  "<div class = 'victims'>被害者数：" + data[i].victims + "</div><div>"  + data[i].feature + "</div></li>" ;
 			
 			}
 		};
@@ -46,7 +46,7 @@
 		color: #007bbb;
 	}
 	
-	.title{
+	.mountain, .victims, .dict{
 		margin: 1em 0 1em 0;
 	}
 	
@@ -99,6 +99,10 @@
 	color: #ffffff;
 }
 
+h1 span {
+  display: inline-block;
+}
+
     </style>
 	</head>
 
@@ -110,7 +114,7 @@
   </div>
   <div class="col-sm-10">
   <div class="header">
-<h1>火山噴火、噴火災害</h1>
+<h1><span>火山噴火及び</span><span>噴火災害の年表</span></h1>
 	</div>
   	<ul>
 		<div id="volcano"></div>
@@ -118,6 +122,7 @@
 
 <div id="footer">
 
+<div class="dict">
 <div class="sns">
 
 <div class="fb-share-button" data-href="https://linkevery2s.github.io/covid19timeline/example/list.html" data-layout="button_count" data-size="small"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Flinkevery2s.github.io%2Fcovid19timeline%2Fexample%2Flist.html&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">シェア</a></div>
@@ -127,8 +132,13 @@
 <a href="https://b.hatena.ne.jp/entry/" class="hatena-bookmark-button" data-hatena-bookmark-layout="basic-label-counter" data-hatena-bookmark-lang="ja" title="このエントリーをはてなブックマークに追加"><img src="https://b.st-hatena.com/images/v4/public/entry-button/button-only@2x.png" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a><script type="text/javascript" src="https://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script>
 
 </div>
+</dict>
 
-<a href="https://creativecommons.org/licenses/by/4.0/deed.ja" target="_blank">CC BY 4.0</a> &copy; <a href="https://hitoshi2s.netlify.app/index.html" target="_blank">仁志</a>
+<div class="dict">
+<a href="https://creativecommons.org/licenses/by/4.0/deed.ja" target="_blank">CC BY 4.0</a> &copy; <a href="https://hitoshi2s.netlify.app/index.html" target="_blank">仁志</a></div>
+
+<div class="dict">出典：令和３年防災白書</div>
+
 </div>
 
 <div id="fb-root"></div>
