--- a/simulation/volcano.html
+++ b/simulation/volcano.html
@@ -1,9 +1,21 @@
 <!DOCTYPE HTML>
 <html lang="ja">
 	<head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
-	<title>火山噴火、噴火災害</title>
+	<title>火山噴火及び噴火災害の年表</title>
   	<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" >
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="噴火災害の年表をリスト化してみました。">
+	<meta property="og:title" content="火山噴火及び噴火災害の年表" />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://dpnote.netlify.app/simulation/volcano.html" />
+    <meta property="og:image" content="https://dpnote.netlify.app/images/volcano.png" />
+
+<meta property="og:description" content="噴火災害の年表をリスト化してみました。" />
+  <meta name='twitter:card' content='summary_large_image'>
+  <meta name='twitter:title' content='火山噴火及び噴火災害の年表' />
+  <meta name='twitter:description' content='噴火災害の年表をリスト化してみました。' />
+  <meta name='twitter:image' content='https://dpnote.netlify.app/images/volcano.png' />
+
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
 
