--- a/simulation/volcano.html
+++ b/simulation/volcano.html
@@ -42,6 +42,14 @@
 		
 	</script>
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-202486341-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-202486341-1');
+</script>
+
     <style>
     
 	html,body{
