--- a/simulation/watersupply.html
+++ b/simulation/watersupply.html
@@ -33,6 +33,15 @@ html,body,#map{
 	<script src='./watersupply.geojson'></script>
 
 	<script type='text/javascript'  src='./watersupply.js'></script>
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-202486341-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-202486341-1');
+</script>
+
 </head>
 
 <body onLoad='ini()'>
