--- a/404.html
+++ b/404.html
@@ -137,10 +137,10 @@
   <p>このブログの記事は、<a href="https://creativecommons.org/licenses/by/4.0/deed.ja" target="_blank" class="footer_link">CC BY 4.0 <i class="fas fa-external-link-alt"></i></a> のもと公開しています。</p>
   <center>
     
-    <a href="https://twitter.com/hitoshi2sl" target="_blank"><div class="circle1"><i class="fab fa-twitter"></i></div></a><a href="https://www.instagram.com/hitoshi17l/" target="_blank"><div class="circle2"><i class="fab fa-instagram"></i></div></a><a href="https://dpnote.netlify.app/index.xmls" target="_blank"><div class="circle3"><i class="fas fa-rss-square"></i></div></a>
+    <a href="https://twitter.com/hitoshi2sl" target="_blank"><div class="circle1"><i class="fab fa-twitter"></i></div></a><a href="https://www.instagram.com/hitoshi17l/" target="_blank"><div class="circle2"><i class="fab fa-instagram"></i></div></a><a href="https://docs.google.com/forms/d/e/1FAIpQLSf-WMoBJRTdA1bmN_SmQ-bsNGeLs1l737d3c9BUNuErjH-KBw/viewform" target="_blank"><div class="circle4"><i class="far fa-envelope"></i></div></a><a href="https://dpnote.netlify.app/index.xml" target="_blank"><div class="circle3"><i class="fas fa-rss-square"></i></div></a>
     
     <br>
-    <i class="fa fa-copyright" aria-hidden="true"></i> 仁志.
+    <i class="fa fa-copyright" aria-hidden="true"></i> 仁志. By <a href="https://gohugo.io/" target="_blank" class="footer_link">hugo</a>
     </center>
   </div>
 </footer>
