--- a/simulation/202107atami.html
+++ b/simulation/202107atami.html
@@ -36,20 +36,30 @@
 
 	<style>
 		html,body,#map{margin: 0;padding: 0;width: 100%;height: 100%;}
+		
+		.but{
+			position: fixed;
+			bottom: 0;
+			left: 0;
+			z-index: 1000;
+			background: rgba(255, 255, 255, 0.5);
+		}
+		
 	</style>
+
 	<script>
 		function ini(){
 
 			const osm = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-			attribution: '&copy; <a href="http://osm.org/copyright" target="_blank">OpenStreetMap</a> contributors'
+			attribution: '&copy; <a href="http://osm.org/copyright" target="_blank">OpenStreetMap</a> contributors<br>出典：国土地理院、<a href="https://www.gsi.go.jp/BOUSAI/R3_0701_heavyrain.html" target="_blank">令和3年(2021年)7月1日からの大雨に関する情報</a>を加工・編集して作成'
 			});
 			
 			const tiri = L.tileLayer('https://cyberjapandata.gsi.go.jp/xyz/std/{z}/{x}/{y}.png', {
-			attribution: '&copy; <a href="http://maps.gsi.go.jp/development/ichiran.html" target="_blank">地理院タイル</a>'
+			attribution: '&copy; <a href="http://maps.gsi.go.jp/development/ichiran.html" target="_blank">地理院タイル</a><br>出典：国土地理院、<a href="https://www.gsi.go.jp/BOUSAI/R3_0701_heavyrain.html" target="_blank">令和3年(2021年)7月1日からの大雨に関する情報</a>を加工・編集して作成'
 			});
 			
 			const hyoko = L.tileLayer('https://cyberjapandata.gsi.go.jp/xyz/relief/{z}/{x}/{y}.png', {
-			attribution: '&copy; <a href="http://maps.gsi.go.jp/development/ichiran.html" target="_blank">地理院タイル</a><br>海域部は海上保安庁海洋情報部の資料を使用して作成'
+			attribution: '&copy; <a href="http://maps.gsi.go.jp/development/ichiran.html" target="_blank">地理院タイル</a><br>海域部は海上保安庁海洋情報部の資料を使用して作成<br>出典：国土地理院、<a href="https://www.gsi.go.jp/BOUSAI/R3_0701_heavyrain.html" target="_blank">令和3年(2021年)7月1日からの大雨に関する情報</a>を加工・編集して作成'
 			});
 
 			const atami = new L.tileLayer('https://cyberjapandata.gsi.go.jp/xyz/20210705oame_0706do/{z}/{x}/{y}.png');
@@ -79,6 +89,9 @@
 
         	L.marker([35.118943,139.080563], {icon: L.AwesomeMarkers.icon(options2)}).addTo(map).bindPopup('斜め写真（タップで拡大表示）<br><a href="atamidata/GSI_6924.jpg" data-lightbox="image-1" data-title="GSI_6924"><img src="atamidata/GSI_6924.jpg" width="300px"></a>');
 
+			L.marker([35.111343, 139.095154], {icon: L.AwesomeMarkers.icon(options2)}).addTo(map).bindPopup('斜め写真（タップで拡大表示）<br><a href="atamidata/GSI_6464.jpg" data-lightbox="image-1" data-title="GSI_6464"><img src="atamidata/GSI_6464.jpg" width="300px"></a>');
+
+			L.marker([35.111115, 139.092504], {icon: L.AwesomeMarkers.icon(options2)}).addTo(map).bindPopup('斜め写真（タップで拡大表示）<br><a href="atamidata/GSI_6782.jpg" data-lightbox="image-1" data-title="GSI_6782"><img src="atamidata/GSI_6782.jpg" width="300px"></a>');
 
 			L.marker([35.108605, 139.090261], {icon: L.AwesomeMarkers.icon(options2)}).addTo(map).bindPopup('斜め写真（タップで拡大表示）<br><a href="atamidata/GSI_6792.jpg" data-lightbox="image-1" data-title="GSI_6792"><img src="atamidata/GSI_6792.jpg" width="300px"></a>');
 
@@ -101,8 +114,6 @@
 		
 		}
 		
-
-		
 	</script>
 
 <title>2021年7月熱海市土砂災害可視化マップ</title>
@@ -110,5 +121,6 @@
 </head>
 <body onLoad='ini()'>
 	<div id='map'></div>
+
 </body>
 </html>
