--- a/404.html
+++ b/404.html
@@ -18,9 +18,10 @@
 
 <meta property="og:type" content="article">
 <meta name="description" content="">
-<meta name="twitter:card" content="summary" />
+<meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:creator" content="">
 <meta name="twitter:title" content="404 Page not found" />
+<meta name="twitter:image" content="https://dpnote.netlify.app/" />
 <meta property="og:url" content="https://dpnote.netlify.app/404.html" />
 <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="" />
