--- a/404.html
+++ b/404.html
@@ -21,11 +21,21 @@
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:creator" content="">
 <meta name="twitter:title" content="404 Page not found" />
+
+
+
+
 <meta name="twitter:image" content="https://dpnote.netlify.app/" />
+
+
+
+<meta property="og:image" content="https://dpnote.netlify.app/">
+
+
 <meta property="og:url" content="https://dpnote.netlify.app/404.html" />
 <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="" />
-<meta property="og:image" content="https://dpnote.netlify.app/" />
+
 
 <link rel="apple-touch-icon" sizes="180x180" href="https://dpnote.netlify.app/icons/apple-touch-icon.png">
 
