--- a/simulation/dam.html
+++ b/simulation/dam.html
@@ -2,15 +2,15 @@
 <html lang="ja">
 <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
 	<meta charset='UTF-8' name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no'>
-	<meta name="description" content='東京都の災害時給水ステーションをマップにしました。'>
-	<meta property="og:title" content="東京都災害時給水ステーションマップ" />
+	<meta name="description" content='日本全国ダムの情報をマップ化しました'>
+	<meta property="og:title" content="日本全国ダムの情報をマップ化しました" />
 	<meta property="og:type" content="website" />
-	<meta property="og:image" content="https://dpnote.netlify.app/images/watersupply.png" />
-	<meta property="og:description" content="東京都の災害時給水ステーションをマップにしました。" />
+	<meta property="og:image" content="https://dpnote.netlify.app/images/dam.png" />
+	<meta property="og:description" content="日本全国ダムの情報をマップ化しました" />
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="東京都災害時給水ステーションマップ" />
-	<meta name="twitter:description" content='東京都の災害時給水ステーションをマップにしました。' />
-	<meta name="twitter:image" content="https://dpnote.netlify.app/images/watersupply.png" />
+	<meta name="twitter:title" content="日本全国ダムの情報をマップ化しました" />
+	<meta name="twitter:description" content='日本全国ダムの情報をマップ化しました' />
+	<meta name="twitter:image" content="https://dpnote.netlify.app/images/dam.png" />
 	<meta name="author" content="仁志">
 	<meta name="keywords" content="防災、災害対策">
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" />
@@ -37,7 +37,7 @@ html,body,#map{
 }
 	</style>
 	
-	<title>東京都災害時給水ステーションマップ</title>
+	<title>日本全国ダムの情報をマップ化しました</title>
 	<script src='./dam.geojson'></script>
 
 	<script type='text/javascript'  src='./dam.js'></script>
