--- a/simulation/202107atami.html
+++ b/simulation/202107atami.html
@@ -13,8 +13,8 @@
 	<meta name="twitter:image" content="https://dpnote.netlify.app/images/202107atami.png" />
 	<meta name="author" content="仁志">
 	<meta name="keywords" content="防災、災害対策">
-	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" />
-	<script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
+	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+	<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.css" integrity="sha512-cUoWMYmv4H9TGP4hbm1mIjYo90WzIQFo/5jj+P5tQcDTf+iVR59RyIj/a9fRsBxzxt5Dnv/Ex7MzRIxcDwaOLw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.min.js" integrity="sha512-8BqQ2RH4L4sQhV41ZB24fUc1nGcjmrTA6DILV/aTPYuUzo+wBdYdp0fvQ76Sxgf36p787CXF7TktWlcxu/zyOg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -31,17 +31,11 @@
 		gtag('js', new Date());
 		gtag('config', 'UA-202486341-1');
 	</script>
-
+	
+	<script src='atamidata/tochi.geojson'></script>
+	
 	<style>
 		html,body,#map{margin: 0;padding: 0;width: 100%;height: 100%;}
-		
-		.but{
-			position: fixed;
-			bottom: 0;
-			left: 0;
-			z-index: 1000;
-			background: rgba(255, 255, 255, 0.5);
-		}
 		
 	</style>
 
