--- a/simulation/202107atami2.html
+++ b/simulation/202107atami2.html
@@ -17,20 +17,17 @@
 
     <style>
         body { margin: 0; overflow: hidden; }
-        h1, #footer {text-align: center;}
+        #header, #footer {text-align: center;}
         p {padding: 15px;}
     </style>
 
 </head>
 <body>
-    <h1>WEB GL 3D<br>「熱海市土砂災害」</h1>
+    <div id="header">WEB GL 3D「熱海市土砂災害」</div>
     <iframe src="atamidata/3d.html" width="100%" height="500px" frameborder="no" scrolling="no"></iframe>
-    <p>熱海市土砂災害を3Dで可視化しました。<br>
+
     出典：
-    <a href="https://maps.gsi.go.jp/development/ichiran.html" target="_blank">地理院タイル</a>、国土地理院<br>
-    <a href="https://www.gsi.go.jp/BOUSAI/R3_0701_heavyrain.html" target="_blank">令和3年7月1日からの大雨に関する情報</a>、国土地理院
-    </p>
-    
+    <a href="https://maps.gsi.go.jp/development/ichiran.html" target="_blank">地理院タイル</a>、<br><a href="https://www.gsi.go.jp/BOUSAI/R3_0701_heavyrain.html" target="_blank">令和3年7月1日からの大雨に関する情報</a>、国土地理院
     <div id="footer">&copy; 仁志、<a href="https://creativecommons.org/licenses/by/4.0/deed.ja" target="_blank">CC BY 4.0</a></div>
 </body>
 </html>
