--- a/simulation/202107atami2.html
+++ b/simulation/202107atami2.html
@@ -33,8 +33,8 @@
     /****************************************************/
     var vFrameMode             = 'trans';
     /****************************************************/
-    var Dem                    = "./dem.csv";
-    var DemTextue              = "./texture.png";
+    var Dem                    = "./atami2.csv";
+    var DemTextue              = "./atami2.png";
     var IconTexture            = "./icon.png";
     /****************************************************/
     var oRenderer              = null;
