--- a/simulation/202107atami2.html
+++ b/simulation/202107atami2.html
@@ -1080,6 +1080,15 @@
 
     //-->
     </script>
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-202486341-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-202486341-1');
+</script>
+
 </head>
 <body onload="Init();">
     <div id="webgl"></div>
