--- a/simulation/202107atami2.html
+++ b/simulation/202107atami2.html
@@ -18,18 +18,23 @@
         body { margin: 0; overflow: hidden; }
         #menu{
         	position: fixed;
-        	bottom: 0; right: 0;
+        	bottom: 0; left: 0;
         	z-index: 1000;
-        	margin: 0 3px 3px 0;
-        	text-align: right;
-        	background: rgba(255, 255, 255, 0.5)
+        	margin: 0 0 3px 3px;
+        	text-align: left;
+        	background: rgba(255, 255, 255, 0.5);
+        	font-size: 0.6rem;
+        }
+        #menu a{
+        	text-decoration: none;
+        	border-bottom: 1px dotted #485859;
         }
         .title{
         	position: fixed;
         	top: 0; left: 0;
         	z-index: 1000;
-        	margin: 0 0 0 5px;
-        	text-align: right;
+        	width: 100%;
+        	text-align: center;
         }
     </style>
     <script src="https://cyberjapandata.gsi.go.jp/3d/three.min.js"></script>
