--- a/simulation/202108heavyrain.html
+++ b/simulation/202108heavyrain.html
@@ -1,10 +1,19 @@
-<!DOCTYPE html>
-<html lang='ja'>
-<head>
+<!DOCTYPE HTML>
+<html lang="ja">
+<head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
 <meta charset='UTF-8' name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no'>
-
-
-
+<meta name="description" content="令和3年8月豪雨 六角川の浸水推定を可視化しました。">
+<meta property="og:title" content="令和3年8月豪雨 六角川の浸水推定を可視化しました。" />
+<meta property="og:type" content="website" />
+<meta property="og:image" content="https://dpnote.netlify.app/images/202108heavyrain.png" />
+<meta property="og:description" content="令和3年8月豪雨 六角川の浸水推定を可視化しました。" />
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="令和3年8月豪雨 六角川の浸水推定を可視化しました。" />
+<meta name="twitter:description" content="令和3年8月豪雨 六角川の浸水推定を可視化しました。" />
+<meta name="twitter:image" content="https://dpnote.netlify.app/images/202108heavyrain.png" />
+<meta name="author" content="仁志">
+<meta name="keywords" content="防災、災害対策">
+<meta name="twitter:player" content="https://dpnote.netlify.app/videos/202108heavyrain.mp4" />
 
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
 <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
