--- a/simulation/202108heavyrain.html
+++ b/simulation/202108heavyrain.html
@@ -103,7 +103,7 @@ map_right.sync(map_left, {syncCursor: true});
 
 }
 </script>
-<title>令和3年8月豪雨 六角川</title>
+<title>令和3年8月豪雨 六角川の浸水推定を可視化しました。</title>
 
 </head>
 <body onLoad='ini()'>
