--- a/simulation/202108heavyrain.html
+++ b/simulation/202108heavyrain.html
@@ -14,7 +14,13 @@
 <meta name="author" content="仁志">
 <meta name="keywords" content="防災、災害対策">
 <meta name="twitter:player" content="https://dpnote.netlify.app/videos/202108heavyrain.mp4" />
-
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-202486341-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-202486341-1');
+</script>
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
 <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
 <script src="./L.Map.Sync.js"></script>
