--- a/simulation/river/index.html
+++ b/simulation/river/index.html
@@ -109,7 +109,7 @@
 					<option value="8">茨城県</option>
 					<option value="9">栃木県</option>
 					<option value="10">群馬県</option>
-					<option value="11">埼玉道</option>
+					<option value="11">埼玉県</option>
 					<option value="12">千葉県</option>
 					<option value="13">東京都</option>
 					<option value="14">神奈川県</option>
