--- a/simulation/202108heavyrain.html
+++ b/simulation/202108heavyrain.html
@@ -13,7 +13,12 @@
 <meta name="twitter:image" content="https://dpnote.netlify.app/images/202108heavyrain.png" />
 <meta name="author" content="仁志">
 <meta name="keywords" content="防災、災害対策">
-<meta name="twitter:player" content="https://dpnote.netlify.app/videos/202108heavyrain.mp4" />
+<meta name="twitter:player" content="https://dpnote.netlify.app/index.html" />
+<meta name="twitter:player:width" content="640">
+<meta name="twitter:player:height" content="480">
+<meta name="twitter:player:stream" content="https://dpnote.netlify.app/videos/202108heavyrain.mp4">
+<meta name="twitter:player:stream:content_type" content="video/mp4;">
+
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-202486341-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
