--- a/404.html
+++ b/404.html
@@ -71,7 +71,7 @@
 	<h1 class="h_h1"><a href="https://dpnote.netlify.app/index.html">ＤＰ　Ｎｏｔｅ</a></h1>
 	</div>
 	
-	
+	<div class="h_s"><a href="search/index.html"><div class="h_circle"><i class="fas fa-search"></i></div></a></div>
 
     <main>
 <div class="never wrap">
