--- a/simulation/r27mkyusyu.html
+++ b/simulation/r27mkyusyu.html
@@ -15,18 +15,14 @@
         <meta property="og:url" content="https://dpnote.netlify.app/simulation/r27mkyusyu.html">
         <meta property="og:title" content="令和2年九州豪雨を可視化しました。" />
         <meta property="og:description" content="令和2年九州豪雨を可視化しました。" />
-        <meta property="og:image" content="./r27mkyusyu.png" />
+        <meta property="og:image" content="https://dpnote.netlify.app/simulation/r27mkyusyu.png" />
         <meta property="og:image:type" content="image/png" />
-        <meta property="og:image:width" content="800" />
-        <meta property="og:image:height" content="800" />
 
         <!-— twitter card tags -->
         <meta name="twitter:card" content="summary_large_image">
-        <meta name="twitter:site" content="@uber">
-        <meta name="twitter:creator" content="@uber">
         <meta name="twitter:title" content="令和2年九州豪雨を可視化しました。">
         <meta name="twitter:description" content="令和2年九州豪雨を可視化しました。">
-        <meta name="twitter:image" content="./r27mkyusyu.png" />
+        <meta name="twitter:image" content="https://dpnote.netlify.app/simulation/r27mkyusyu.png" />
 
         <!-- Load React/Redux -->
         <script src="https://unpkg.com/react@16.8.4/umd/react.production.min.js" crossorigin></script>
@@ -47,7 +43,7 @@
           /**
            * Provide your MapBox Token
            **/
-          const MAPBOX_TOKEN = 'sk.eyJ1IjoiaGl0b3NoaTJzIiwiYSI6ImNrd3JkazllcjA1M2wzMm15dGgzb2RoaDIifQ.icIo5BF_Scr8r2smLW878Q';
+          const MAPBOX_TOKEN = 'pk.eyJ1IjoiaGl0b3NoaTJzIiwiYSI6ImNrdDFqb2NsMDBmd2kyd3BrZmpxYnJ6d2IifQ.9r4CvQSX1QLWHRbbFFSPKA';
           const WARNING_MESSAGE = 'Please Provide a Mapbox Token in order to use Kepler.gl. Edit this file and fill out MAPBOX_TOKEN with your access key';
         </script>
 
