--- a/simulation/r27mkyusyu.html
+++ b/simulation/r27mkyusyu.html
@@ -60,7 +60,7 @@
           /**
            * Provide your MapBox Token
            **/
-          const MAPBOX_TOKEN = 'pk.eyJ1IjoiaGl0b3NoaTJzIiwiYSI6ImNrdDFqb2NsMDBmd2kyd3BrZmpxYnJ6d2IifQ.9r4CvQSX1QLWHRbbFFSPKA';
+          const MAPBOX_TOKEN = 'pk.eyJ1IjoiaGl0b3NoaTJzIiwiYSI6ImNrd3RiNTEzNzEwZjAydW10bGVnaGg1N2EifQ.21GL9qXbFX80awm7kBJ0-A';
           const WARNING_MESSAGE = 'Please Provide a Mapbox Token in order to use Kepler.gl. Edit this file and fill out MAPBOX_TOKEN with your access key';
         </script>
 
