--- a/maptest/geocoder/index.html
+++ b/maptest/geocoder/index.html
@@ -52,7 +52,7 @@ map.on('click', function(e) {
 
 }
 </script>
-<title>leaflet初期設定方法</title>
+<title>緯度・経度、Geocoder</title>
 
 </head>
 <body onLoad='ini()'>
