--- a/simulation/kumamoto/visualization1.html
+++ b/simulation/kumamoto/visualization1.html
@@ -26,7 +26,13 @@
 	<script src='data/shindomap6j.geojson'></script>
 	<script src='data/shindomap6k.geojson'></script>
 	<script src='data/shindomap7.geojson'></script>
-
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-202486341-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+	  gtag('config', 'UA-202486341-1');
+	</script>
 	<style>
 		html,
 		body,
