--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   <div class="excerpt">
     <div class="excerpt_header">
       <h3 class="post_link">
-        <a href="https://dpnote.netlify.app/post/higashinihontsunami/" title="Higashinihontsunami">Higashinihontsunami</a>
+        <a href="https://dpnote.netlify.app/post/higashinihontsunami/" title="東日本大震災の津波観測を3Dマップにて可視化">東日本大震災の津波観測を3Dマップにて可視化</a>
       </h3>
       
   <div class="post_meta">
@@ -101,7 +101,7 @@
     </div>
     <div class="excerpt_footer partition">
       <div class="kai_thumbnail">
-        <img src='https://dpnote.netlify.app/images/post/higashinihontsunami.jpg' alt="Higashinihontsunami">
+        <img src='https://dpnote.netlify.app/images/post/higashinihontsunami.jpg' alt="東日本大震災の津波観測を3Dマップにて可視化">
       </div>
       
         <div>
