--- a/simulation/kumamoto/visualization1.html
+++ b/simulation/kumamoto/visualization1.html
@@ -60,8 +60,9 @@
 				maxZoom: 10
 			});
 
-			L.tileLayer('https://www.toolserver.org/tiles/bw-mapnik/{z}/{x}/{y}.png', {
-				attribution: '&copy; <a href="http://maps.gsi.go.jp/development/ichiran.html" target="_blank">地理院タイル</a> l &copy; <a href="https://www.data.jma.go.jp/svd/eqdb/data/shindo/index.html" target="_blank">気象庁 震度データベース検索</a><br>活断層図：岡田篤正・廣内大助・松多信尚・宮内崇裕(2017):1:25,000都市圏活断層図「中津川」，国土地理院.'
+			
+			L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+				attribution: '&copy; <a href="http://osm.org/copyright" target="_blank">OpenStreetMap</a> contributors l &copy; <a href="https://www.data.jma.go.jp/svd/eqdb/data/shindo/index.html" target="_blank">気象庁 震度データベース検索</a><br>活断層図：岡田篤正・廣内大助・松多信尚・宮内崇裕(2017):1:25,000都市圏活断層図「中津川」，国土地理院.'
 			}).addTo(map);
 			var t1 = new L.tileLayer('https://cyberjapandata.gsi.go.jp/xyz/afm/{z}/{x}/{y}.png', {
 				opacity: 0.8
