--- a/simulation/nishinihon.html
+++ b/simulation/nishinihon.html
@@ -1,6 +1,8 @@
-
-    <!DOCTYPE html>
-    <html>
+<!DOCTYPE html>
+<html lang="ja">
+	<head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
+	<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <head>
         <meta charset="UTF-8"/>
         <title>西日本集中豪雨の3Dマップ</title>
