--- a/simulation/krader/index.html
+++ b/simulation/krader/index.html
@@ -106,7 +106,7 @@ html,body,#map{
 
 <body onLoad='ini()'>
 
-		<div id="time_stamp">aaa</div>
+		<div id="time_stamp"></div>
 		<div id='map'></div>
 
 
