--- a/simulation/krader/index.html
+++ b/simulation/krader/index.html
@@ -42,12 +42,12 @@
 
 						time_stamp.innerHTML = year + "年" + month + "月" + day + "日" + jikoku_h + "時" + jikoku_m + "分";
 
-						var tiri = L.tileLayer('https://cyberjapandata.gsi.go.jp/xyz/seamlessphoto/{z}/{x}/{y}.jpg', {
-								attribution: '&copy; <a href="http://maps.gsi.go.jp/development/ichiran.html" target="_blank">地理院タイル</a>'
+						var tiri = L.tileLayer('https://basemap.nationalmap.gov/arcgis/rest/services/USGSImageryOnly/MapServer/tile/{z}/{y}/{x}?blankTile=false', {
+								attribution: "&copy; <a href='https://basemap.nationalmap.gov/arcgis/rest/services/USGSImageryOnly/MapServer'>USGS Imagery Only</a>"
 							});
 
 						var test = new L.tileLayer("https://www.jma.go.jp/bosai/jmatile/data/nowc/" + day_time +"/none/" + valid_time + "/surf/hrpns/{z}/{x}/{y}.png", {
-								opacity: 0.8
+								opacity: 0.8, attribution: "<a href='https://www.jma.go.jp/jma/kishou/know/kurashi/highres_nowcast.html'>気象庁(高解像度降水ナウキャスト)</a>"
 								});
 
 						var map = L.map('map', {center: [34.624,135.341], maxZoom: 14, minZoom: 4,zoomControl: false, zoom: 7,layers: [tiri, test]});
