--- a/simulation/krader/index.html
+++ b/simulation/krader/index.html
@@ -1,6 +1,6 @@
-
 <!DOCTYPE HTML>
 <html lang="ja">
+
 <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
 	<meta charset='UTF-8' name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no'>
 	<meta name="description" content='気象庁の雨雲レーダーの情報を取得しました。'>
@@ -18,81 +18,90 @@
 	<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
 
 	<script type='text/javascript'>
+		function ini() {
 
-	function ini(){
-
-		fetch('https://www.jma.go.jp/bosai/jmatile/data/nowc/targetTimes_N1.json')
-		  .then(response => response.json())
-		  .then(data =>
-					{
+			fetch('https://www.jma.go.jp/bosai/jmatile/data/nowc/targetTimes_N1.json')
+				.then(response => response.json())
+				.then(data => {
 
 						let day_time = data[0].basetime;
 						let valid_time = data[0].validtime;
-						let year = day_time.slice(0,4);
-						let month = day_time.slice(4,6);
-						let day = day_time.slice(6,8);
-						let jikoku_h = parseInt(day_time.slice(8,10),10) + 9;
+						let year = day_time.slice(0, 4);
+						let month = day_time.slice(4, 6);
+						let day = day_time.slice(6, 8);
+						let jikoku_h = parseInt(day_time.slice(8, 10), 10) + 9;
 
-						if(jikoku_h > 24){
+						if (jikoku_h > 24) {
 							jikoku_h = jikoku_h - 24;
-						}else{}
+						} else {}
 
-						let jikoku_m = day_time.slice(10,12)
+						let jikoku_m = day_time.slice(10, 12)
 
 
 						time_stamp.innerHTML = year + "年" + month + "月" + day + "日" + jikoku_h + "時" + jikoku_m + "分";
 
-						var tiri = L.tileLayer('https://basemap.nationalmap.gov/arcgis/rest/services/USGSImageryOnly/MapServer/tile/{z}/{y}/{x}?blankTile=false', {
-								attribution: "&copy; <a href='https://basemap.nationalmap.gov/arcgis/rest/services/USGSImageryOnly/MapServer'>USGS Imagery Only</a>"
-							});
+						var tiri = L.tileLayer('https://cyberjapandata.gsi.go.jp/xyz/seamlessphoto/{z}/{x}/{y}.jpg', {
+							attribution: '&copy; <a href="http://maps.gsi.go.jp/development/ichiran.html" target="_blank">地理院タイル</a>'
+						});
 
-						var test = new L.tileLayer("https://www.jma.go.jp/bosai/jmatile/data/nowc/" + day_time +"/none/" + valid_time + "/surf/hrpns/{z}/{x}/{y}.png", {
-								opacity: 0.8, attribution: "<a href='https://www.jma.go.jp/jma/kishou/know/kurashi/highres_nowcast.html'>気象庁(高解像度降水ナウキャスト)</a>"
-								});
+						var test = new L.tileLayer("https://www.jma.go.jp/bosai/jmatile/data/nowc/" + day_time + "/none/" + valid_time + "/surf/hrpns/{z}/{x}/{y}.png", {
+							opacity: 0.8,
+							attribution: "<a href='https://www.jma.go.jp/jma/kishou/know/kurashi/highres_nowcast.html'>気象庁(高解像度降水ナウキャスト)</a>"
+						});
 
-						var map = L.map('map', {center: [34.624,135.341], maxZoom: 14, minZoom: 4,zoomControl: false, zoom: 7,layers: [tiri, test]});
+						var map = L.map('map', {
+							center: [34.624, 135.341],
+							maxZoom: 14,
+							minZoom: 4,
+							zoomControl: false,
+							zoom: 7,
+							layers: [tiri, test]
+						});
 
 						L.control.zoom({
-    					position: 'topright'
+							position: 'topright'
 						}).addTo(map);
 
 					}
 
-			);
+				);
 
 
-	}
-
+		}
 	</script>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-202486341-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'UA-202486341-1');
-</script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-202486341-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+
+		function gtag() {
+			dataLayer.push(arguments);
+		}
+		gtag('js', new Date());
+		gtag('config', 'UA-202486341-1');
+	</script>
 
 	<style>
+		html,
+		body,
+		#map {
+			margin: 0;
+			padding: 0;
+			width: 100%;
+			height: 100%;
+			z-index: 0;
+		}
 
-html,body,#map{
-	margin: 0;
-	padding: 0;
-	width: 100%;
-	height: 100%;
-	z-index: 0;
-}
-
-#time_stamp{
-	z-index: 100;
-	position: fixed;
-	left: 5px;
-	top: 5px;
-	background: rgba(255, 255, 255, 0.8);
-	padding: 5px;
-	border: 3px solid #a0d8ef;
-}
+		#time_stamp {
+			z-index: 100;
+			position: fixed;
+			left: 5px;
+			top: 5px;
+			background: rgba(255, 255, 255, 0.8);
+			padding: 5px;
+			border: 3px solid #a0d8ef;
+		}
 	</style>
 
 	<title>気象庁の雨雲レーダーの情報を取得しました</title>
@@ -102,9 +111,10 @@ html,body,#map{
 
 <body onLoad='ini()'>
 
-		<div id="time_stamp"></div>
-		<div id='map'></div>
+	<div id="time_stamp"></div>
+	<div id='map'></div>
 
 
 </body>
+
 </html>
