--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     </div>
     <div class="excerpt_footer partition">
       <div class="kai_thumbnail">
-        <img src='https://dpnote.netlify.app/images/post/childrenhinan.png' alt="避難所の中に子供たちの居場所をつくる">
+        <img src='https://dpnote.netlify.app/images/post/childrenhinan.jpg' alt="避難所の中に子供たちの居場所をつくる">
       </div>
       
         <div>
