--- a/search/index.html
+++ b/search/index.html
@@ -264,7 +264,7 @@
     window.search = async () => {
       result.innerHTML = "";
 
-      const res = await fetch("https://raw.githubusercontent.com/linkevery2s/testdata/main/data.json");
+      const res = await fetch("https://dpnote.netlify.app/search/data.json");
       const data = await res.json();
 
       let kensaku = text.value;
