--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     </div>
     <div class="excerpt_footer partition">
       <div class="kai_thumbnail">
-        <img src='https://dpnote.netlify.app/images/denshouhi/.png' alt="自然災害伝承碑マップを作成しました。i">
+        <img src='https://dpnote.netlify.app/images/denshouhi.png' alt="自然災害伝承碑マップを作成しました。i">
       </div>
       
         <div>
