--- a/simulation/r27mkyusyu.html
+++ b/simulation/r27mkyusyu.html
@@ -55,7 +55,7 @@
 <body>
 
   <div class="attribution">
-    © <a href="http://www.openstreetmap.org/about/" target="_blank" rel="noopener noreferrer">OpenStreetMap</a> contributors
+    © <a href="http://www.openstreetmap.org/about/" target="_blank" rel="noopener noreferrer">OpenStreetMap</a> contributors、<a href="https://www.data.jma.go.jp/obd/stats/etrn/" target="_blank">気象データ</a>、気象庁：<a href="https://creativecommons.org/licenses/by/4.0/deed.ja" target="_blank">CC BY 4.0</a>
   </div>
 
 </body>
